--- a/Exercises/01 - Handling data/my practices.ipynb
+++ b/Exercises/01 - Handling data/my practices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2890e692-84ff-47f5-b930-1f77e5daf65a",
    "metadata": {
     "tags": []
@@ -18,7 +18,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f1757392-104e-4461-9136-5b31c8826565",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
        "array([ 454, 1232,  645,  435], dtype=int64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "36623b9b-d0de-4c13-8856-4d96b32ef22a",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
        "RangeIndex(start=0, stop=4, step=1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a5598f4b-54a1-442d-87a4-62ee0dc5131d",
    "metadata": {
     "tags": []
@@ -95,7 +95,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "276da096-40be-4162-be0c-98b8b32a3e39",
    "metadata": {
     "tags": []
@@ -120,7 +120,7 @@
        "56"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +131,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4675b471-c936-4fe7-9c6a-9266d9bcd5ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Firmicutes         632\n",
+       "Proteobacteria    1638\n",
+       "Actinobacteria     569\n",
+       "Bacteroidetes      115\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacteria = pd.Series([632, 1638, 569, 115], \n",
+    "    index=['Firmicutes', 'Proteobacteria', 'Actinobacteria', 'Bacteroidetes'])\n",
+    "\n",
+    "bacteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fd74a1b0-9ee1-4540-a468-7325d8b0f5ba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "569"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacteria['Actinobacteria']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "76237851-de05-46b9-b2d7-3534370b339e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacteria[[name.endswith('bacteria') for name in bacteria.index]]\n",
+    "[name.endswith('bacteria') for name in bacteria.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d365309e-0101-4561-8fa5-a35e1672ed24",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>patient</th>\n",
+       "      <th>phylum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>632</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Firmicutes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1638</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Proteobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>569</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Actinobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>115</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bacteroidetes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>433</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Firmicutes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1130</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Proteobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>754</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Actinobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>555</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bacteroidetes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   value  patient          phylum\n",
+       "0    632        1      Firmicutes\n",
+       "1   1638        1  Proteobacteria\n",
+       "2    569        1  Actinobacteria\n",
+       "3    115        1   Bacteroidetes\n",
+       "4    433        2      Firmicutes\n",
+       "5   1130        2  Proteobacteria\n",
+       "6    754        2  Actinobacteria\n",
+       "7    555        2   Bacteroidetes"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame({'value':[632, 1638, 569, 115, 433, 1130, 754, 555],\n",
+    "                     'patient':[1, 1, 1, 1, 2, 2, 2, 2],\n",
+    "                     'phylum':['Firmicutes', 'Proteobacteria', 'Actinobacteria', \n",
+    "    'Bacteroidetes', 'Firmicutes', 'Proteobacteria', 'Actinobacteria', 'Bacteroidetes']})\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3022fb21-f46a-40de-8e53-4c94416db5c1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>patient</th>\n",
+       "      <th>phylum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>632</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Firmicutes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1638</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Proteobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>569</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Actinobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>115</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bacteroidetes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>433</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Firmicutes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1130</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Proteobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>754</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Actinobacteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>555</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bacteroidetes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   value  patient          phylum\n",
+       "0    632        1      Firmicutes\n",
+       "1   1638        1  Proteobacteria\n",
+       "2    569        1  Actinobacteria\n",
+       "3    115        1   Bacteroidetes\n",
+       "4    433        2      Firmicutes\n",
+       "5   1130        2  Proteobacteria\n",
+       "6    754        2  Actinobacteria\n",
+       "7    555        2   Bacteroidetes"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame({'value':[632, 1638, 569, 115, 433, 1130, 754, 555],\n",
+    "                     'patient':[1, 1, 1, 1, 2, 2, 2, 2],\n",
+    "                     'phylum':['Firmicutes', 'Proteobacteria', 'Actinobacteria', \n",
+    "    'Bacteroidetes', 'Firmicutes', 'Proteobacteria', 'Actinobacteria', 'Bacteroidetes']})\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb6d4f38-ae96-4bc7-93ca-37af129f741b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3f9f1c-7417-4bad-bd1a-59f38c491880",
    "metadata": {},
    "outputs": [],
    "source": []
